# DevScope

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  devscope-project-plan-v2.md  devscope-project-plan-v3.md  devscope-project-plan.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
api/: config.py  main.py  requirements.txt
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  metrics.py  repositories.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  anomaly.py  repository.py  sync_job.py  user.py
backend/app/schemas/: __init__.py  anomaly.py  metric.py  repository.py  user.py
backend/app/services/: __init__.py  bigquery_service.py  github_client.py  metrics_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_main.py
docs/: ADR.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  ROADMAP.md  setup-guide.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
infra/: docker-compose.yml  setup_gcp.sh
ingestion/: config.py  github_client.py  main.py  publisher.py  requirements.txt
ml/: predict.py  preprocessing.py  requirements.txt  train.py
pipeline/: main.py  requirements.txt  schemas.py  transforms.py
scripts/: deploy.sh  seed_bigquery.py
tests/: conftest.py
(+45 files in other folders)
